--- a/business-interior.html
+++ b/business-interior.html
@@ -38,7 +38,8 @@
             </li>
             <li class="nav-item dropdown">
               <a
-                class="nav-link dropdown-toggle"
+                class="nav-link dropdown-toggle active"
+                aria-current="page"
                 href="#"
                 role="button"
                 data-bs-toggle="dropdown"
