--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>이젠 인테리어</title>
     <link rel="stylesheet" href="./css/bootstrap.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+    />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
@@ -29,9 +33,7 @@
         <div class="collapse navbar-collapse" id="menubar">
           <ul class="navbar-nav ms-auto mb-2 mb-md-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
-                >Home</a
-              >
+              <a class="nav-link" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="profile.html">프로필</a>
@@ -60,7 +62,9 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">연락처</a>
+              <a class="nav-link active" aria-current="page" href="contact.html"
+                >연락처</a
+              >
             </li>
           </ul>
         </div>
@@ -162,7 +166,7 @@
     <main class="container my-5">
       <div class="row">
         <!-- 프로필 바 섹션 시작-->
-        <section class="col-md-5 col-lg-3">
+        <section class="col-md-5 col-lg-3 order-2 order-md-1">
           <div class="bg-dark text-white text-center my-3 p-4 rounded">
             <img
               src="images/main-profile.jpg"
@@ -228,9 +232,109 @@
           </div>
         </section>
         <!-- 프로필 바 섹션 끝-->
-        <!-- 포트폴리오 섹션 시작 -->
-        <section class="col-md-7 col-lg-9">연락처</section>
-        <!-- 포트폴리오 섹션 끝 -->
+        <!-- contact 섹션시작 -->
+        <section class="col-md-7 col-lg-9 order-1 order-md-2 text-center">
+          <!-- Contact 섹션 시작 -->
+          <section class="row pt-3 pb-5">
+            <div class="col-lg-9 mx-auto">
+              <h2 class="fs-1 fw-bold pb-3">Contact</h2>
+              <p class="text-muted">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Laborum, asperiores nisi. Officia consequuntur culpa doloribus
+                quas corporis non provident repudiandae.
+              </p>
+              <div class="contact-bg py-4 mt-3">
+                <p class="fs-4 fw-bold logo-font mb-0 text-white">
+                  <i class="bi bi-telephone-fill me-3 me-lg-5"></i>010-000-0000
+                </p>
+              </div>
+              <div class="contact-bg py-4 mt-3">
+                <p class="fs-4 fw-bold logo-font mb-0 text-white">
+                  <i class="bi bi-envelope-open-heart me-3 me-lg-5"></i
+                  >codethem@naver.com
+                </p>
+              </div>
+              <div class="contact-bg py-4 mt-3">
+                <p class="fs-4 fw-bold logo-font mb-0 text-white">
+                  <i class="bi bi-shop me-3 me-lg-5"></i>지하철 8호선 모란역 2번
+                  출구
+                </p>
+              </div>
+            </div>
+          </section>
+          <!-- Contact 섹션 끝 -->
+          <hr />
+          <!-- 문의 사항 섹션 시작 -->
+          <div class="row py-5">
+            <div class="col-lg-9 mx-auto">
+              <h2 class="fs-1 fw-bold pb-3">문의 사항</h2>
+              <p class="text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+              <!-- 입력폼 -->
+              <form action="" class="text-start bg-warning p-5">
+                <div class="mb-3">
+                  <label for="user-name" class="form-label">이름</label>
+                  <input
+                    class="form-control bg-transparent border-dark"
+                    type="text"
+                    id="user-name"
+                    placeholder="이름"
+                  />
+                </div>
+                <div class="mb-3">
+                  <label for="user-email" class="form-label">이메일</label>
+                  <input
+                    class="form-control bg-transparent border-dark"
+                    type="email"
+                    id="user-email"
+                    placeholder="email@abc.com"
+                  />
+                </div>
+                <div class="mb-3">
+                  <label for="user-msg" class="form-label">문의 사항</label>
+                  <textarea
+                    class="form-control bg-transparent border-dark"
+                    name=""
+                    id="user-msg"
+                    placeholder="문의 사항을 남겨 주세요."
+                    cols="30"
+                    rows="5"
+                  ></textarea>
+                </div>
+                <div class="form-check mb-3">
+                  <input
+                    type="checkbox"
+                    class="form-check-input"
+                    id="news-letter-check"
+                    checked
+                  />
+                  <label for="news-letter-check" class="form-check-label"
+                    >이젠 인테리어 뉴스레터 받아보기</label
+                  >
+                </div>
+                <button class="btn btn-dark">전송하기</button>
+              </form>
+            </div>
+          </div>
+          <!-- 문의 사항 섹션 끝 -->
+          <hr />
+          <!-- 구글 맵 섹션 시작 -->
+          <section class="py-4">
+            <h2 class="fs-1 fw-bold">오시는 길</h2>
+            <p class="text-muted py-3">
+              주소 : Lorem ipsum dolor sit amet consectetur adipisicing.
+            </p>
+            <div class="ratio ratio-16x9">
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3168.186120350308!2d127.1271211763184!3d37.43270773179002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca883df7418d1%3A0x1e9926ba0f71d15c!2z7J207KCgSVTsu7Ttk6jthLDslYTsubTrjbDrr7g!5e0!3m2!1sko!2skr!4v1703482457175!5m2!1sko!2skr"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe>
+            </div>
+          </section>
+          <!-- 구글 맵 섹션 끝 -->
+        </section>
+        <!-- contact 섹션끝 -->
       </div>
     </main>
     <!-- 메인 섹션 끝 -->
