--- a/profile.html
+++ b/profile.html
@@ -29,12 +29,12 @@
         <div class="collapse navbar-collapse" id="menubar">
           <ul class="navbar-nav ms-auto mb-2 mb-md-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
-                >Home</a
-              >
+              <a class="nav-link" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="profile.html">프로필</a>
+              <a class="nav-link active" aria-current="page" href="profile.html"
+                >프로필</a
+              >
             </li>
             <li class="nav-item dropdown">
               <a
